--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -34,6 +34,36 @@
 
 }
 
+#main #more-info {
+    position: absolute;
+    top: 120px;
+
+    font-family: 'Raleway', sans-serif;
+    font-size: large;
+    color: black;
+    overflow: hidden;
+
+    padding: 0px;
+    height: 0;
+    width: 0;
+    
+    /* width: 25rem;
+    height: 8rem;
+    padding: 8px; */
+
+    background-color:rgb(150, 150, 150);
+    
+    border-radius: 6px;
+    
+    transition: height 1s, padding 1s, width 1s;
+    
+}
+
+#main h1:hover + #more-info {
+    width: 25rem;
+    height: 8rem;
+    padding: 8px;
+}
 
 
 #main #search-items {
