--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -36,7 +36,7 @@
 
 #main #more-info {
     position: absolute;
-    top: 120px;
+    top: 90px;
 
     font-family: 'Raleway', sans-serif;
     font-size: large;
@@ -46,20 +46,17 @@
     padding: 0px;
     height: 0;
     width: 0;
-    
-    /* width: 25rem;
-    height: 8rem;
-    padding: 8px; */
 
     background-color:rgb(150, 150, 150);
     
     border-radius: 6px;
     
-    transition: height 1s, padding 1s, width 1s;
+    transition: height 1s, padding 1s, width 1s, top 1s;
     
 }
 
 #main h1:hover + #more-info {
+    top: 120px;
     width: 25rem;
     height: 8rem;
     padding: 8px;
