--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -7,6 +7,41 @@
     align-items: center;
 }
 
+#main .hover-arrow {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    top: 120px;
+    margin-left: 23rem;
+    z-index: 2;
+    font-family: 'Raleway', sans-serif;
+    transform: rotate(27deg);
+
+    transition: opacity 4s;
+}
+
+#main .hover-arrow .shape {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 10px 20px 10px 0;
+    border-color: transparent rgb(155, 155, 155) transparent transparent;
+    position: relative;
+    left: 2px;
+}
+
+#main .hover-arrow :last-child {
+    background-color:rgb(155, 155, 155);
+    padding: 4px;
+    padding-right: 4px;
+    border-radius: 5px;
+}
+
+.hide-me {
+    opacity: 0;
+}
+
+
 #main > .shape {
     position: absolute;
     background-color: rgb(50, 50, 50);
